<resources>
    <string name="app_name">Tutoria</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title">Aplicativo de Tutoria</string>


    <string name="mentoring_process">Sessões de Tutoria</string>
    <string name="tudoreds">Tutorados</string>
    <string name="reports">Relatórios</string>
    <string name="indicators">Indicadores</string>
    <string name="config">Configurações</string>
    <string name="logout">Sair</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>


    <string name="server_address">SERVER_ADDRESS</string>
    <string name="title_activity_mentoring">MentoringActivity</string>

    <array name="question_answers">
        <item>COMPETENTE</item>
        <item>NAO SATISFATORIO</item>
        <item>NA</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_list_mentorship">Sessões de Tutoria</string>
    <string name="title_activity_tutor_update">Detalhes do Utilizador</string>
    <string name="title_activity_indicator_collection">Recolha de Indicadores</string>

    <string name="tutored_must_be_selected">O tutorando deve ser seleccionado!</string>
    <string name="form_must_be_selected">O formulário deve ser seleccionado!</string>
    <string name="submit">Salvar</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="health_facility_must_be_selected">A unidade sanitária de deve ser seleccionada!</string>
    <string name="referred_month_must_be_selected">O mês de referência deve ser seleccionado!</string>
    <string name="performed_date_must_be_selected">A data da Tutoria deve ser seleccionada!</string>
    <string name="user_details">Detalhes de Utilizador</string>
    <string name="change_password">Alterar a Senha</string>
    <string name="title_activity_change_password">Alteração de Senha</string>
    <string name="user_name">Nome</string>
    <string name="new_password">Nova Senha</string>
    <string name="confirm_password">Confirmação da Senha</string>
    <string name="password_changed_success">Senha alterada com sucesso! Retornar ao menú Principal?</string>
    <string name="password_must_be_the_same">As senhas devem ser iguais</string>
    <string name="new_password_must_be_filled">A nova senha deve ser preenchida</string>
    <string name="confirm_password_must_be_filled">A nova senha de confirmação deve ser preenchida</string>
    <string name="required_field">Campo Obrigatório</string>
    <string name="phone_number_invalid">Número de telefone Inválido! ex:+258820000000</string>
    <string name="none_answer_was_seleted">Nenhuma resposta foi seleccionada</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_value_is_empty">Campo obrigatório</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="referred_month">Mês de referência:</string>
    <string name="terminate">Terminar</string>
    <string name="go_ahead">Continuar</string>

    <string name="reason_must_be_informed"> O motivo deve ser informado</string>
    <string name="session_termination_reason">Motivo para o término da sessão (O utilizador não preencheu o número mínimo de vezes solicitado no formulário)</string>
    <string name="iterations">Iterações</string>
    <string name="complete">Completa</string>
    <string name="incomplete">Incompleta</string>
    <string name="cabinet_must_be_selected">O gainete deve ser seleccionado</string>
    <string name="all_questions_must_be_answered">Todas as questões devem ser respondidas</string>
    <string name="select">Seleccione...</string>

    <string name="health_facility">Unidade Sanitária</string>
    <string name="tutored">Tutorado</string>
    <string name="form">Formulário</string>
    <string name="confirmation">Confirmação</string>
    <string name="submission">Submissão</string>
    <string name="reset_password">Inicializar a Senha</string>
    <string name="forget_password">Esqueceu a Senha?</string>
    <string name="send">Enviar</string>
    <string name="reset_password_text">Por favor informe o seu e-mail para que a sua senha seja devidamente actualizada</string>
    <string name="iteration_times">vezes foi (ram) preenchida (as). O utilizador deseja continuar?</string>
    <string name="of">das</string>
    <string name="wait">Aguarde</string>
    <string name="processing">A processar o pedido....</string>
    <string name="reset_password_success">A Senha foi inicializada com sucesso. Consulte o seu email</string>
    <string name="reset_password_error">Não foi possivel inicializar a senha. Por favor tente novamente</string>
    <string name="province_must_be_selected">A provincia deve ser seleccionada</string>
    <string name="district_must_be_selected">O distrito deve ser seleccionado</string>
    <string name="district">Distrito</string>
    <string name="total">Total</string>

    <string name="version">© 2022 © v1.5.4</string>
    <string name="no_result">Sem Resultado</string>
    <string name="no_result_found">Nenhum resultado foi encontrado</string>
    <string name="server_error">Erro de comunicação</string>
    <string name="server_error_comunication">Erro de comunicação com o servidor! Tente novamente.</string>
    <string name="start_time_must_be_selected">A hora de Início deve ser indicada</string>
    <string name="end_time_must_be_selected">A hora de término deve ser indicada</string>
    <string name="start_time_must_not_be_lower_than_end_time">A hora de início não deve ser superior nem igual da data de término</string>
    <string name="the_iteration_type_must_be_selected">O Tipo de Iteração deve ser Indicado</string>
    <string name="iteration_type">Tipo de Iteração</string>
    <string name="patient_iterations_exceeded">O número de iterações para pacientes atingiu o limite</string>
    <string name="file_iterations_exceeded">O número de iterações para processos clínicos atingiu o limite</string>
    <string name="file">Processo Clínico</string>
    <string name="patient">Paciente</string>
    <string name="close_confirmation">Tem a certeza de que deseja interromper a sessão?</string>
    <string name="ok">Ok</string>
    <string name="metadata_cannot_be_changed">Metadados como: Formulário, Tutorando e Datas não podem ser alterados por existir uma iteração (de paciente ou processo clínico)!</string>
    <string name="itens_selected">Item(s) seleccionado(s)...</string>
    <string name="all_sessions_must_be_sync">Todas as sessões de tutoria deve ser sincronizadas!</string>
    <string name="no_data_to_sync">Sem dados por sincronizar!</string>
    <string name="tudoreds_synced_with_success">Tutorandos sincronizados com sucesso!</string>
    <string name="point_of_situation">Ponto de Situação</string>
    <string name="per_period">Por Período</string>
    <string name="sessions_bar_chart_title">Resultados de Mes Atual</string>
    <string name="loading_metadata">A carregar metadados...</string>
    <string name="could_not_load_metadata">Não foi possivel carregar metadados. Tente mais tarde...</string>
    <string name="loading_report_data">A carregar dados do relatório...</string>
    <string name="could_not_load_report_data">Não foi possível carregar os dados do relatório. Tente depois...</string>
    <string name="completed">Completou</string>
    <string name="remaining">Restante</string>
    <string name="percentage_minimum">% Mínima</string>
    <string name="percentage_min">% Mín</string>
    <string name="no_data_found">No data found!</string>

    <string name="door_must_be_selected">A porta deve ser seleccionada</string>
    <string name="time_of_day_must_be_selected">O horário deve ser seleccionado</string>
    <string name="attended_must_be_greather_than_previous">Os HIV+ prévios não devem ser maiores que o número de utentes atendidos no sector.</string>
    <string name="previous_must_be_greather_than_previous_and_tested">Os Testados mais o prévios não devem ser maior que o número de utentes atendidos no sector.</string>
    <string name="tested_must_be_greather_than_positive">Os positivos não devem ser maior que os testados.</string>
    <string name="positive_must_be_greather_than_enrolled">Os inscritos não devem ser maior que os positivos.</string>
    <string name="remeber_send_data_to_server">Possui 5 ou mais registos de tutoria no celular não se esqueça de enviar ao servidor em breve!</string>
    <string name="delete_confirmation">Deseja remover a(s) tutoria(s)?</string>
    <string name="sync_confirmation">Deseja enviar a(s) tutoria(s)?</string>

    <string name="settings_synced_with_success">Configurações sincronizadas com sucesso!</string>

    <string name="session_submission_state">Período de submissão</string>
    <string name="session_submission_state_expired">Período de submissão expirado.</string>
    <string name="session_submission_state_valid">Período de submissão válido.</string>

    <string name="session_submission_state_expired_alert">O período de submissão da tutoria está expirado. Não poderá enviar esta tutoria. Deseja cancelar este processo?</string>

</resources>