<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/main_menu_settings"
        android:orderInCategory="100"
        android:title="@string/config"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_tutor_details"
        android:orderInCategory="100"
        android:title="@string/user_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_change_password"
        android:orderInCategory="100"
        android:title="@string/change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_logout"
        android:icon="@mipmap/ic_settings"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
