<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logged_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/user_name"
                android:textColor="#000"
                android:textSize="7pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fields_background"
                android:hint="@string/new_password"
                android:padding="10dp"
                android:password="true"
                android:singleLine="true"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fields_background"
                android:hint="@string/confirm_password"
                android:padding="10dp"
                android:password="true"
                android:singleLine="true"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#00695C"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>