<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/report_result_item_district"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/report_result_item_health_facility"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/district" />

    <TextView
        android:id="@+id/report_result_item_health_facility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:padding="6dp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@+id/report_result_item_district"
        app:layout_constraintEnd_toStartOf="@+id/report_result_item_total"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/report_result_item_district"
        tools:text="@string/health_facility" />

    <TextView
        android:id="@+id/report_result_item_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@+id/report_result_item_health_facility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/report_result_item_health_facility"
        tools:text="@string/total" />

</android.support.constraint.ConstraintLayout>