<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Chegou ao fim do preenchimento do formulário:"
            android:textColor="#000"
            android:textSize="7pt"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/terminate_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="1/2 vez (es) foi (ram) preenchida (as). O utilizador deseja continuar?"
            android:textColor="#000"
            android:textSize="5pt"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/continue_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="#00695C"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/continue_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="#00695C"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/terminate_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/session_termination_reason"
            android:textColor="#000"
            android:textSize="5pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/fields_background"
            android:lines="4"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="6pt" />

    </LinearLayout>

    <Button
        android:id="@+id/terminate_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:background="#00695C"
        android:text="@string/terminate"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold" />

</RelativeLayout>
