<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="250dp">

    <ImageView
        android:id="@+id/report_fragment_report_result_image_view"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="8dp"
        android:background="#00695C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/report_fragment_report_result_form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/report_fragment_report_result_image_view"
        app:layout_constraintStart_toStartOf="@+id/report_fragment_report_result_image_view"
        app:layout_constraintTop_toTopOf="@+id/report_fragment_report_result_image_view"
        tools:text="Nome do Relatório" />

    <TextView
        android:id="@+id/report_fragment_report_result_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/report_fragment_report_result_image_view"
        app:layout_constraintEnd_toEndOf="@+id/report_fragment_report_result_image_view"
        app:layout_constraintStart_toStartOf="@+id/report_fragment_report_result_image_view"
        app:layout_constraintTop_toBottomOf="@+id/report_fragment_report_result_form_name"
        app:layout_constraintVertical_bias="1.0"
        tools:text="De 21-07-2018 à 20-06-2018" />

    <TextView
        android:id="@+id/report_result_item_district"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#ccc"
        android:padding="6dp"
        android:text="@string/district"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/report_result_item_health_facility"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@+id/report_fragment_report_result_image_view"
        app:layout_constraintTop_toBottomOf="@+id/report_fragment_report_result_image_view" />

    <TextView
        android:id="@+id/report_result_item_health_facility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#ccc"
        android:padding="6dp"
        android:text="@string/health_facility"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/report_result_item_district"
        app:layout_constraintEnd_toStartOf="@+id/report_result_item_total"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/report_result_item_district" />

    <TextView
        android:id="@+id/report_result_item_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ccc"
        android:padding="6dp"
        android:text="@string/total"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/report_result_item_health_facility"
        app:layout_constraintEnd_toEndOf="@+id/report_fragment_report_result_image_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/report_result_item_health_facility" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/repor_fragment_report_result_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/fragment_report_current_stage_target"
        app:layout_constraintEnd_toEndOf="@+id/report_result_item_total"
        app:layout_constraintStart_toStartOf="@+id/report_result_item_district"
        app:layout_constraintTop_toBottomOf="@+id/report_result_item_district" />


    <TextView
        android:id="@+id/fragment_report_current_stage_target"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#ccc"
        android:padding="6dp"
        android:text="Meta Prevista"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragment_report_current_stage_total_performed"
        app:layout_constraintEnd_toStartOf="@+id/fragment_report_current_stage_target_value"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="@+id/repor_fragment_report_result_list" />

    <TextView
        android:id="@+id/fragment_report_current_stage_target_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00695C"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_report_current_stage_target"
        app:layout_constraintEnd_toEndOf="@+id/report_result_item_health_facility"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/fragment_report_current_stage_target"
        tools:text="15" />

    <TextView
        android:id="@+id/fragment_report_current_stage_total_performed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#ccc"
        android:padding="6dp"
        android:text="Total Realizado"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragment_report_current_stage_achievement"
        app:layout_constraintEnd_toStartOf="@+id/fragment_report_current_stage_total_performed_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="@+id/repor_fragment_report_result_list" />

    <TextView
        android:id="@+id/fragment_report_current_stage_total_performed_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00695C"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_report_current_stage_total_performed"
        app:layout_constraintEnd_toEndOf="@+id/report_result_item_health_facility"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/fragment_report_current_stage_total_performed"
        tools:text="200" />


    <TextView
        android:id="@+id/fragment_report_current_stage_achievement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#ccc"
        android:padding="6dp"
        android:text="Grau de Cumprimento"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_report_current_stage_achievement_value"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="@+id/fragment_report_current_stage_total_performed" />


    <TextView
        android:id="@+id/fragment_report_current_stage_achievement_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00695C"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_report_current_stage_achievement"
        app:layout_constraintEnd_toEndOf="@+id/report_result_item_health_facility"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/fragment_report_current_stage_achievement"
        tools:text="10.95%" />

</android.support.constraint.ConstraintLayout>